# kitok

./: CMakeLists.txt  README.md
cmake/: json.cmake  spdlog.cmake
csrc/: kitok.cpp  reader.cpp  vocabulary.cpp
examples/: hf_llama_example.cpp
include/kitok/: kitok.hpp  reader.hpp  vocabulary.hpp
